--- a/pay-customer/src/main/resources/application.properties
+++ b/pay-customer/src/main/resources/application.properties
@@ -38,8 +38,8 @@ jd.pay.url=https://h5pay.jd.com/jdpay/saveOrder
 jdpay.cert.path=test.cer
 
 
-spring.application.name=configServer
-spring.cloud.config.profile=test
-spring.cloud.config.label=master
-spring.cloud.config.uri=http://localhost:8888
+#spring.application.name=configServer
+#spring.cloud.config.profile=test
+#spring.cloud.config.label=master
+#spring.cloud.config.uri=http://localhost:8888
 #endpoints.restart.enabled=true
