更新上海银行接口配置

--- a/pay-core/src/main/resources/config/application-dev.properties
+++ b/pay-core/src/main/resources/config/application-dev.properties
@@ -23,3 +23,6 @@ spring.redis.port=12009
 spring.redis.password=www.xintairuan.com
 spring.redis.timeout=120000
 spring.redis.database=6
+
+#上海银行接口地址
+shbank.itf.url=http://CN:30150/ib-rest/gateway
