--- a/pay-core/src/main/resources/config/application-prod.properties
+++ b/pay-core/src/main/resources/config/application-prod.properties
@@ -22,3 +22,6 @@ spring.redis.port=12009
 spring.redis.password=www.xintairuan.com
 spring.redis.timeout=120000
 spring.redis.database=6
+
+#上海银行接口地址
+shbank.itf.url=http://CN:30150/ib-rest/gateway
