更新上海银行接口配置

--- a/pay-core/src/main/resources/config/application-dev.properties
+++ b/pay-core/src/main/resources/config/application-dev.properties
@@ -2,6 +2,9 @@
 server.port=8081
 # 客户端访问路径
 server.context-path=
+#zookeeper地址
+zookeeper.address=127.0.0.1:2181
+
 # Mybatis日志级别
 #logging.level.tk.mybatis=DEBUG
 #logging.level.com.pay=DEBUG
