--- a/pay-core/src/main/resources/config/application-prod.properties
+++ b/pay-core/src/main/resources/config/application-prod.properties
@@ -2,6 +2,8 @@
 server.port=8082
 # 客户端访问路径
 server.context-path=
+#zookeeper地址
+zookeeper.address=127.0.0.1:2181
 # Mybatis日志级别
 logging.level.tk.mybatis=DEBUG
 
